@@ -6,26 +6,23 @@ import cgb.transfert.entities.TransferStatus;
 import cgb.transfert.records.TransferPostRecord;
 import cgb.transfert.services.TransferService;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
 import java.time.LocalDate;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
@@ -43,81 +40,86 @@ class TransferControllerTest {
 
     private final ObjectMapper objectMapper = new ObjectMapper();
 
+    private UUID transferId;
+    private Account source;
+    private Account destination;
     private Transfer transfer;
-    private TransferPostRecord transferPostRecord;
 
     @BeforeEach
     void setUp() {
-        objectMapper.registerModule(new JavaTimeModule());
         mockMvc = MockMvcBuilders.standaloneSetup(transferController).build();
 
-        Account sourceAccount = new Account("FR7630006000010000000000001", "Alice Dupont", 5000.00);
-        Account destinationAccount = new Account("FR7630006000010000000000019", "Sophie Fabre", 2000.00);
-
-        transfer = new Transfer(UUID.fromString("1a2b3c4d-0001-0001-0001-000000000001"), 1000.0, LocalDate.now(), "Test Transfer", new TransferStatus(), sourceAccount, destinationAccount);
-        transferPostRecord = new TransferPostRecord(1000.0, LocalDate.now(), "Test Transfer","FR7630006000010000000000001", "FR7630006000010000000000019");
+        source = new Account("SRC123", "John", 1000.0);
+        destination = new Account("DST456", "Jane", 500.0);
+        transferId = UUID.randomUUID();
+        transfer = new Transfer(transferId, 200.0, LocalDate.now(), "Payment",
+                new TransferStatus(UUID.randomUUID(), "DONE"), source, destination);
     }
 
     @Test
-    void getAllTransfers_ShouldReturnListOfTransfers() throws Exception {
-        when(transferService.getAllTransfers()).thenReturn(Arrays.asList(transfer));
+    void getAllTransfers_ShouldReturnList() throws Exception {
+        when(transferService.getAllTransfers()).thenReturn(List.of(transfer));
 
         mockMvc.perform(get("/api/transfers"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].amount").value(1000.0));
+                .andExpect(jsonPath("$[0].id").value(transferId.toString()))
+                .andExpect(jsonPath("$[0].amount").value(200.0));
     }
 
     @Test
     void getTransferById_ShouldReturnTransfer_WhenFound() throws Exception {
-        when(transferService.getTransferById(UUID.fromString("1a2b3c4d-0001-0001-0001-000000000001"))).thenReturn(Optional.of(transfer));
+        when(transferService.getTransferById(transferId)).thenReturn(Optional.of(transfer));
 
-        mockMvc.perform(get("/api/transfers/1a2b3c4d-0001-0001-0001-000000000001"))
+        mockMvc.perform(get("/api/transfers/" + transferId))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.amount").value(1000.0));
+                .andExpect(jsonPath("$.id").value(transferId.toString()))
+                .andExpect(jsonPath("$.amount").value(200.0));
     }
 
     @Test
-    void getTransferById_ShouldReturnNotFound_WhenTransferDoesNotExist() throws Exception {
-        when(transferService.getTransferById(UUID.fromString("1a2b3c4d-0001-0001-0001-000000099999"))).thenReturn(Optional.empty());
+    void getTransferById_ShouldReturnNotFound_WhenNotExists() throws Exception {
+        when(transferService.getTransferById(transferId)).thenReturn(Optional.empty());
 
-        mockMvc.perform(get("/api/transfers/1a2b3c4d-0001-0001-0001-000000099999"))
+        mockMvc.perform(get("/api/transfers/" + transferId))
                 .andExpect(status().isNotFound());
     }
 
     @Test
     void createTransfer_ShouldReturnCreatedTransfer() throws Exception {
-        when(transferService.saveTransfer(any(TransferPostRecord.class))).thenReturn(transfer);
+        TransferPostRecord post = new TransferPostRecord(200.0, "Payment", "SRC123", "DST456");
+        when(transferService.saveTransfer(any())).thenReturn(transfer);
 
         mockMvc.perform(post("/api/transfers")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(transferPostRecord)))
+                        .content(objectMapper.writeValueAsString(post)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.amount").value(1000.0));
+                .andExpect(jsonPath("$.amount").value(200.0))
+                .andExpect(jsonPath("$.description").value("Payment"));
     }
 
     @Test
     void deleteTransfer_ShouldReturnOk() throws Exception {
-        Mockito.doNothing().when(transferService).deleteTransfer(UUID.fromString("1a2b3c4d-0001-0001-0001-000000000001"));
+        doNothing().when(transferService).deleteTransfer(transferId);
 
-        mockMvc.perform(delete("/api/transfers/1"))
+        mockMvc.perform(delete("/api/transfers/" + transferId))
                 .andExpect(status().isOk());
     }
 
     @Test
-    void getTransfersBySourceAccountNumber_ShouldReturnTransfers() throws Exception {
-        when(transferService.getTransfersBySourceAccountNumber("FR7630006000010000000000001")).thenReturn(Arrays.asList(transfer));
+    void getTransfersBySourceAccount_ShouldReturnList() throws Exception {
+        when(transferService.getTransfersBySourceAccountNumber("SRC123")).thenReturn(List.of(transfer));
 
-        mockMvc.perform(get("/api/transfers/source/FR7630006000010000000000001"))
+        mockMvc.perform(get("/api/transfers/source/SRC123"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].amount").value(1000.0));
+                .andExpect(jsonPath("$[0].sourceAccount.iban").value("SRC123"));
     }
 
     @Test
-    void getTransfersByDestinationAccount_ShouldReturnTransfers() throws Exception {
-        when(transferService.getTransfersByDestinationAccountNumber("FR7630006000010000000000019")).thenReturn(Arrays.asList(transfer));
+    void getTransfersByDestinationAccount_ShouldReturnList() throws Exception {
+        when(transferService.getTransfersByDestinationAccountNumber("DST456")).thenReturn(List.of(transfer));
 
-        mockMvc.perform(get("/api/transfers/destination/FR7630006000010000000000019"))
+        mockMvc.perform(get("/api/transfers/destination/DST456"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].amount").value(1000.0));
+                .andExpect(jsonPath("$[0].destinationAccount.iban").value("DST456"));
     }
 }
